--- a/index.html
+++ b/index.html
@@ -111,13 +111,13 @@
     </div>
 
     <div class="page" id="page3" onclick="nextPage('page3')">
-        <img src="YOUR_PHOTO_2.jpg" alt="Memory 2" class="photo-frame">
+        <img src="father-and-daughter-drawing-illustration-vector.jpg" alt="Memory 2" class="photo-frame">
         <p>"A father is someone who stays hungry just to see his child full. You are my hero, my inspiration, and my entire world."</p>
         <div class="tap-btn">One more thing...</div>
     </div>
 
     <div class="page" id="page2" onclick="nextPage('page2')">
-        <img src="YOUR_PHOTO_1.jpg" alt="Memory 1" class="photo-frame">
+        <img src="bradley-cooper-ap_19301044557884.jpg" alt="Memory 1" class="photo-frame">
         <p>"In every step of my success, there is a hidden story of your sweat and sacrifice. Thank you for always showing me the right path."</p>
         <div class="tap-btn">Tap to Continue</div>
     </div>
