--- a/index.html
+++ b/index.html
@@ -105,19 +105,19 @@
         <h1>Happy Father's Day!</h1>
         <p>"May the smile on your face shine forever. I am the luckiest person in the world to be called your child."</p>
         <div style="margin-top: 25px; color: #ffd700; font-size: 1.4rem; font-family: 'Playfair Display';">
-            — With lots of love, Nir
+            — With lots of love, Alisha
         </div>
         <div class="tap-btn" onclick="location.reload()">See it Again</div>
     </div>
 
     <div class="page" id="page3" onclick="nextPage('page3')">
-        <img src="father-and-daughter-drawing-illustration-vector.jpg" alt="Memory 2" class="photo-frame">
+        <img src="bradley-cooper-ap_19301044557884.jpg" alt="Memory 2" class="photo-frame">
         <p>"A father is someone who stays hungry just to see his child full. You are my hero, my inspiration, and my entire world."</p>
         <div class="tap-btn">One more thing...</div>
     </div>
 
     <div class="page" id="page2" onclick="nextPage('page2')">
-        <img src="bradley-cooper-ap_19301044557884.jpg" alt="Memory 1" class="photo-frame">
+        <img src="father-and-daughter-drawing-illustration-vector.jpg" alt="Memory 1" class="photo-frame">
         <p>"In every step of my success, there is a hidden story of your sweat and sacrifice. Thank you for always showing me the right path."</p>
         <div class="tap-btn">Tap to Continue</div>
     </div>
